adding tooltips for icons

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                 <p class="lead mb-5">Senior Developer at IBM GBS. Working with Cloud and Integration technologies to
                     build custom business solutions for our clients.</p>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/saifabhanji/" target="_blank"><em
-                            class="fab fa-linkedin-in"></em></a>
+                    <a class="social-icon" href="https://www.linkedin.com/in/saifabhanji/" target="_blank"
+                        data-bs-toggle="tooltip" title="LinkedIn"><em class="fab fa-linkedin-in"></em></a>
                     <a class="social-icon" href="https://github.com/saifabhanji" target="_blank"><em
-                            class="fab fa-github"></em></a>
-                    <a class="social-icon" href="./assets/saifabhanji.pdf" target="_blank"><em
-                            class="fas fa-file-alt"></em></a>
+                            class="fab fa-github" data-bs-toggle="tooltip" title="GitHub"></em></a>
+                    <a class="social-icon" href="./assets/saifabhanji.pdf" target="_blank" data-bs-toggle="tooltip"
+                        title="Resume"><em class="fas fa-file-alt"></em></a>
                 </div>
             </div>
         </section>
@@ -175,20 +175,33 @@
                 <h2 class="mb-5">Skills</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-aws"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-bitbucket"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-docker"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-git-alt"></i></li>
+                    <li class="list-inline-item"><em class="fab fa-html5" data-bs-toggle="tooltip" title="HTML5"></em>
+                    </li>
+                    <li class="list-inline-item"><em class="fab fa-css3-alt" data-bs-toggle="tooltip" title="CSS3"></em>
+                    </li>
+                    <li class="list-inline-item"><em class="fab fa-bootstrap" data-bs-toggle="tooltip"
+                            title="Bootstrap"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-js-square" data-bs-toggle="tooltip"
+                            title="JavaScript"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-angular" data-bs-toggle="tooltip"
+                            title="Angular"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-react" data-bs-toggle="tooltip" title="React"></em>
+                    </li>
+                    <li class="list-inline-item"><em class="fab fa-node-js" data-bs-toggle="tooltip"
+                            title="Node.js"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-npm" data-bs-toggle="tooltip" title="NPM"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-python" data-bs-toggle="tooltip" title="Python"></em>
+                    </li>
+                    <li class="list-inline-item"><em class="fab fa-java" data-bs-toggle="tooltip" title="Java"></em>
+                    </li>
+                    <li class="list-inline-item"><em class="fab fa-aws" data-bs-toggle="tooltip"
+                            title="Amazon Web Services"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-bitbucket" data-bs-toggle="tooltip"
+                            title="Bitbucket"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-docker" data-bs-toggle="tooltip" title="Docker"></em>
+                    </li>
+                    <li class="list-inline-item"><em class="fab fa-git-alt" data-bs-toggle="tooltip" title="Git"></em>
+                    </li>
                 </ul>
                 <ul class="fa-ul mb-0">
                     <li>
