--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
         type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 
@@ -36,10 +39,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
-
-                <li class="nav-item"><a class="nav-link js-scroll-trigger"
-                        href="https://github.com/SaifaBhanji?tab=repositories" target="_blank">Projects</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
             </ul>
         </div>
     </nav>
@@ -84,6 +84,7 @@
                             <br>
                             <br>
                             <strong>Key Achievements/Responsibilities:</strong>
+                        </p>
                         <ul>
                             <li>Develop new change requests for client (define RAML, create endpoint, build flows, end
                                 to
@@ -99,7 +100,6 @@
                             <li>Used common integration concepts to promote maintainability, reusability, scalability,
                                 performance, and security</li>
                         </ul>
-                        </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">December 2019 - Present</span></div>
                 </div>
@@ -113,6 +113,7 @@
                             <br>
                             <br>
                             <strong>Key Achievements/Responsibilities:</strong>
+                        </p>
                         <ul>
                             <li>Developed automation scripts, using Selenium and Python, to QA new solution before
                                 deployment to production</li>
@@ -129,7 +130,6 @@
                             </li>
                             <li>Conducted workshops with users to demonstrate the functionality of the new solution</li>
                         </ul>
-                        </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">May 2019 - December 2019</span></div>
                 </div>
@@ -220,26 +220,53 @@
                 </ul>
             </div>
         </section>
-        <!-- Interests-->
-        <!-- <section class="resume-section" id="interests">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid
-                    skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking,
-                    free climbing, and kayaking.</p>
-                <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television
-                    shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest
-                    technology advancements in the front-end web development world.</p>
-            </div>
-        </section> -->
-        <div class="text-center">
-            <small class="text-muted">
-                <em class="fas fa-code"></em> with <em class="fas fa-heart"></em>
-                by <strong>Saifa Bhanji</strong>
-            </small>
-        </div>
         <hr class="m-0" />
+        <!-- Projects-->
+        <section class="resume-section" id="projects">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Projects</h2>
+                <!-- Project Cards -->
+                <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="col">
+                        <div class="card text-center border-primary h-100">
+                            <img src="./assets/projects/ron-swanson-bot.png" class="card-img-top"
+                                alt="Discord screenshot">
+                            <div class="card-body">
+                                <h5 class="card-title">Discord Bot</h5>
+                                <p class="card-text">Discord Bot written in Python that replies with random Ron Swanson
+                                    quotes.</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="https://github.com/SaifaBhanji/ron-swanson-bot" target="_blank"
+                                    class="btn btn-primary">View Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card text-center border-primary h-100">
+                            <img src="./assets/projects/portfolio-site.png" class="card-img-top"
+                                alt="Screenshot of website">
+                            <div class="card-body">
+                                <h5 class="card-title">Personal Website</h5>
+                                <p class="card-text">The site you're on right now! &#x1F44B;</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="https://github.com/SaifaBhanji/saifabhanji.github.io" target="_blank"
+                                    class="btn btn-primary">View Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
+    <div class="text-center">
+        <small class="text-muted">
+            <em class="fas fa-code"></em> with <em class="fas fa-heart"></em>
+            by <strong>Saifa Bhanji</strong>
+        </small>
+    </div>
+    <hr class="m-0" />
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
