update nav footer and skills icons

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                <div class="text-center">
+                    <small class="nav-footer">
+                        <em class="fas fa-code"></em> with <em class="fas fa-heart"></em>
+                        by <strong>Saifa Bhanji</strong>
+                    </small>
+                </div>
             </ul>
         </div>
     </nav>
@@ -187,8 +193,8 @@
                             title="Angular"></em></li>
                     <li class="list-inline-item"><em class="fab fa-react" data-bs-toggle="tooltip" title="React"></em>
                     </li>
-                    <li class="list-inline-item"><em class="fab fa-node-js" data-bs-toggle="tooltip"
-                            title="Node.js"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-node" data-bs-toggle="tooltip" title="Node.js"></em>
+                    </li>
                     <li class="list-inline-item"><em class="fab fa-npm" data-bs-toggle="tooltip" title="NPM"></em></li>
                     <li class="list-inline-item"><em class="fab fa-python" data-bs-toggle="tooltip" title="Python"></em>
                     </li>
@@ -196,8 +202,8 @@
                     </li>
                     <li class="list-inline-item"><em class="fab fa-aws" data-bs-toggle="tooltip"
                             title="Amazon Web Services"></em></li>
-                    <li class="list-inline-item"><em class="fab fa-bitbucket" data-bs-toggle="tooltip"
-                            title="Bitbucket"></em></li>
+                    <li class="list-inline-item"><em class="fab fa-microsoft" data-bs-toggle="tooltip"
+                            title="Microsoft"></em></li>
                     <li class="list-inline-item"><em class="fab fa-docker" data-bs-toggle="tooltip" title="Docker"></em>
                     </li>
                     <li class="list-inline-item"><em class="fab fa-git-alt" data-bs-toggle="tooltip" title="Git"></em>
@@ -259,12 +265,6 @@
                 </div>
             </div>
         </section>
-    </div>
-    <div class="text-center">
-        <small class="text-muted">
-            <em class="fas fa-code"></em> with <em class="fas fa-heart"></em>
-            by <strong>Saifa Bhanji</strong>
-        </small>
     </div>
     <hr class="m-0" />
     <!-- Bootstrap core JS-->
